# manette

./: CMakeLists.txt  manette.kdev4  org.j.manette.desktop  org.j.manette.json  org.j.manette.metainfo.xml
.kdev4/: manette.kdev4
src/: CMakeLists.txt  app.cpp  app.h  evdevcontroller.cpp  evdevcontroller.h  main.cpp  manetteconfig.kcfg  manetteconfig.kcfgc
src/contents/ui/: About.qml  Main.qml
